Completed information section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,34 @@
     </div>
 
 
-   
+    <!-- ========================================================================= -->
+
+    <div class="info">
+        <h1>Some random information.</h1>
+        <div class="info-card">
+            <div class="info-card-2">
+                <div class="info-card-inner"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quos!</p>
+            </div>
+            <div class="info-card-2">
+                <div class="info-card-inner"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quos!</p>
+            </div>
+            <div class="info-card-2">
+                <div class="info-card-inner"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quos!</p>
+            </div>
+            <div class="info-card-2">
+                <div class="info-card-inner"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quos!</p>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- ========================================================================= -->
+
+    
 
 
 </body>
