--- a/index.html
+++ b/index.html
@@ -67,7 +67,40 @@
 
     <!-- ========================================================================= -->
 
+    <div class="quotes">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, similique officiis molestiae, autem fuga
+            beatae nostrum, mollitia consequatur iure et maiores repellat impedit? Ex dicta distinctio et sit laudantium
+            delectus porro, laboriosam at quae numquam.
+        </p>
+        <h3>-Thor, God of Thunder</h3>
     
+    </div>
+
+
+    <!-- ========================================================================= -->
+
+    <div class="action">
+        <div class="action-inner">
+            <div class="action-text">
+                <h3>Call to action! It's Time!</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque beatae culpa</p>
+            </div>
+            <div class="action-button">
+                <button>Sign Up</button>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- ========================================================================= -->
+
+
+    <footer>
+        <p>Copyright Ⓒ All Rights reserved 2024</p>
+    </footer>
+
+
+    <!-- ========================================================================= -->
 
 
 </body>
